# a9-v720

./: .gitignore  Cargo.toml  README.md  a9-v720-server.service  config.json  setup-local.md  test_code51.sh  test_livestream.json
.cursor/rules/: pushbuildebian.mdc
docs/: a9-v720-server.service  capture_packets.py  deploy.sh  send_streaming.py
src/: camera.rs  camera_session.rs  config.rs  fake_srv.py  main.rs  netsrv_tcp.py  pipeline.rs  protocol.rs  telemetry.rs  types.rs  v720_http.py  web.rs
src/net/: tcp.rs  udp.rs
src/protocol/: binary.rs  messages.rs  mod.rs
src/router/: mod.rs  tcp.rs  udp.rs
src/web/: camera_endpoints.rs  mod.rs  server.rs
static/: style.css
